<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">购车宝典</string>
    <string name="action_settings">设置</string>
    <string name="action_collection">收藏</string>
    <string name="action_search">搜索</string>
    <string name="action_ConditionSearch">条件搜索</string>
    <string name="action_cmp">车辆对比</string>

    <!--通用-->
    <string name="no_internet_connection">无法连接网络，请检查您的手机网络设置</string>

    <!--侧拉菜单项目-->
    <string-array name="left_drawer_array">
        <item>个人中心</item>
        <item>热门汽车</item>
        <item>找车</item>
        <item>我的收藏</item>
        <item>设置</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <!--用户模块-->
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="back">返回</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="enter_password">请您输入密码</string>
    <string name="enter_user_name">请您输入用户名</string>
    <string name="ensure_password">请您确认密码</string>
    <string name="enter_email">请您输入邮箱地址</string>
    <string name="register_account">注册账号</string>
    <string name="no_comments">您暂无评论</string>
    <string name="no_collection">暂无用户收藏</string>

    <!--汽车模块-->
    <string name="call_4s_store">拨打电话</string>

    <string name="hint">请输入关键字</string>
    <string name="carseable_name">车辆品牌</string>
    <string name="car_price">车辆价位</string>
    <string name="car_size">车辆级别</string>
    <string name="search">搜索</string>
    <string name="user_collection">我的收藏</string>


    <string name="weixingche">微型车</string>
    <string name="xiaoxingche">小型车</string>
    <string name="jincouxingche">紧凑型车</string>
    <string name="zhongxingche">中型车</string>
    <string name="zhongdaxingche">中大型车</string>
    <string name="haohuache">豪华车</string>
    <string name="xiaoxingSUV">小型SUV</string>
    <string name="jincouxingSUV">紧凑型SUV</string>
    <string name="zhongxingSUV">中型SUV</string>
    <string name="zhongdaxingSUV">中大型SUV</string>
    <string name="quanchicunSUV">全尺寸SUV</string>
    <string name="MPV">MPV</string>
    <string name="paoche">跑车</string>
    <string name="pika">皮卡</string>
    <string name="weimian">微面</string>
    <string name="qingke">轻客</string>
    <string name="weika">微卡</string>
    <string name="add">添加</string>
    <string name="add_btn">添加车型</string>
    <string name="cmp_btn">对比</string>

    <string name="border_top">上部边界</string>
    <string name="border_bottom">底部边界</string>
    <string name="image_url">图片链接</string>

    <string name="hot_car_show">热门车辆</string>

    <string name="push_setting_btn">推送设置</string>
    <string name="accept_pushing">接收推送</string>
    <string name="start_push_time">开始接收时间</string>
    <string name="end_push_time">结束接收时间</string>




    <!--设置模块-->
    <string name="clear_cache">清除缓存</string>
    <string name="push_settings">推送设置</string>
    <string name="about">关于</string>
    <string name="new_version">检测新版本</string>
    <string name="feed_back">意见反馈</string>
    <string name="exit">退出</string>
    <string name="about_text">版权所有   Doric项目小组\nCopyright  2014  Doric.\nAll Rights Reserved</string>
</resources>
