<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.Doric.CarBook.search.SearchMain"
      android:layout_width="match_parent">

    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_action_key_search"
            android:orderInCategory="100"
            android:showAsAction="ifRoom"
            android:title="@string/action_search"/>
    <item
            android:id="@+id/action_conditionSearch"
            android:icon="@drawable/ic_action_condition_search"
            android:orderInCategory="100"
            android:showAsAction="ifRoom"
            android:title="@string/action_ConditionSearch"/>
    <item
            android:id="@+id/action_cmp"
            android:icon="@drawable/ic_action_compare_car"
            android:orderInCategory="100"
            android:showAsAction="ifRoom"
            android:title="@string/action_cmp"/>
</menu>
